src/renderer/snapshots/thndrs__renderer__transcript__tests__transcript_reasoning_narrow.snap
---
source: src/renderer/transcript/tests.rs
expression: contents
---
│                                           # [bg=#171928]=                                        
│   Thinking ✓                              # [bg=#171928]=   [fg=#a48cf2 bg=#171928 b]=Thinking ✓ [bg=#171928]=                           [bg=#171928]=  
│   I need to check the file structure      # [bg=#171928]=   [fg=#abb4da bg=#171928 i]=I need to check the file structure [bg=#171928]=   [bg=#171928]=  
│   first.                                  # [bg=#171928]=   [fg=#abb4da bg=#171928 i]=first. [bg=#171928]=                               [bg=#171928]=
