src/renderer/snapshots/thndrs__renderer__transcript__tests__transcript_startup_banner_narrow.snap
---
source: src/renderer/transcript/tests.rs
expression: contents
---
│                                           # [bg=#171928]=                                        
│   thndrs  coding agent                    # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=thndrs  coding agent [bg=#171928]=                 [bg=#171928]=  
│   model: test-model   search: native      # [bg=#171928]=   [fg=#abb4da bg=#171928]=model:  [fg=#ebfafa bg=#171928]=test-model [fg=#abb4da bg=#171928]=   search:  [fg=#ebfafa bg=#171928]=native [bg=#171928]=   [bg=#171928]=  
│   cwd: ~/Pr/St/O/thndrs                   # [bg=#171928]=   [fg=#abb4da bg=#171928]=cwd: ~/Pr/St/O/thndrs [bg=#171928]=                [bg=#171928]=  
│   ────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────── [bg=#171928]=  
│   [Runtime]                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Runtime] [bg=#171928]=                            [bg=#171928]=  
│     provider = "umans"                    # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=provider = "umans" [bg=#171928]=                 [bg=#171928]=  
│     model = "test-model"                  # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=model = "test-model" [bg=#171928]=               [bg=#171928]=  
│     search = "native"                     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=search = "native" [bg=#171928]=                  [bg=#171928]=  
│   [Context]                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Context] [bg=#171928]=                            [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=(none) [bg=#171928]=                             [bg=#171928]=  
│   [Search]                                # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Search] [bg=#171928]=                             [bg=#171928]=  
│     native: Umans server-side search;     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=native: Umans server-side search; [bg=#171928]=  [bg=#171928]=  
│     DuckDuckGo HTML fallback via          # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=DuckDuckGo HTML fallback via [bg=#171928]=       [bg=#171928]=  
│     web_search tool; read_url fetches     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=web_search tool; read_url fetches [bg=#171928]=  [bg=#171928]=  
│     public HTTP(S) and extracts HTML      # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=public HTTP(S) and extracts HTML [bg=#171928]=   [bg=#171928]=  
│     with Lectito                          # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=with Lectito [bg=#171928]=                       [bg=#171928]=  
│   [Skills]                                # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Skills] [bg=#171928]=                             [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=(none) [bg=#171928]=                             [bg=#171928]=  
│   [Diagnostics]                           # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Diagnostics] [bg=#171928]=                        [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=(none) [bg=#171928]=                             [bg=#171928]=  
│   ────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────── [bg=#171928]=  
│   ›  Ask for a change, run a command,     # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=›   [fg=#abb4da bg=#171928]=Ask for a change, run a command,  [bg=#171928]=  
│   or inspect this repo.                   # [bg=#171928]=   [fg=#abb4da bg=#171928]=or inspect this repo. [bg=#171928]=                [bg=#171928]=  
│   ?  help                                 # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=?   [fg=#abb4da bg=#171928]=help [bg=#171928]=                              [bg=#171928]=  
│   /model switch models                    # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=/model  [fg=#abb4da bg=#171928]=switch models [bg=#171928]=                 [bg=#171928]=  
│                                           # [bg=#171928]=
