src/renderer/snapshots/thndrs__renderer__transcript__tests__transcript_startup_banner_with_context_and_diagnostics.snap
---
source: src/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   888    888                    888                                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888                    888                  [bg=#171928]=                           [bg=#171928]=  
│   888    888                    888                                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888                    888                  [bg=#171928]=                           [bg=#171928]=  
│   888    888                    888                                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888                    888                  [bg=#171928]=                           [bg=#171928]=  
│   888888 88888b.  88888b.   .d88888 888d888 .d8888b                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888888 88888b.  88888b.   .d88888 888d888 .d8888b  [bg=#171928]=                           [bg=#171928]=  
│   888    888 "88b 888 "88b d88" 888 888P"   88K                                   # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888 "88b 888 "88b d88" 888 888P"   88K      [bg=#171928]=                           [bg=#171928]=  
│   888    888  888 888  888 888  888 888     "Y8888b.                              # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888  888 888  888 888  888 888     "Y8888b. [bg=#171928]=                           [bg=#171928]=  
│   Y88b.  888  888 888  888 Y88b 888 888          X88                              # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=Y88b.  888  888 888  888 Y88b 888 888          X88 [bg=#171928]=                           [bg=#171928]=  
│   "Y888  888  888 888  888  "Y88888 888      88888P'                              # [bg=#171928]=   [fg=#37f499 bg=#171928 b]="Y888  888  888 888  888  "Y88888 888      88888P' [bg=#171928]=                           [bg=#171928]=  
│   ────────────────────────────────────────────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────────────────────────────────────────────── [bg=#171928]=  
│   thndrs  coding agent                                                            # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=thndrs  coding agent [bg=#171928]=                                                         [bg=#171928]=  
│   model: test-model   search: native                                              # [bg=#171928]=   [fg=#abb4da bg=#171928]=model:  [fg=#ebfafa bg=#171928]=test-model [fg=#abb4da bg=#171928]=   search:  [fg=#ebfafa bg=#171928]=native [bg=#171928]=                                           [bg=#171928]=  
│   cwd: ~/Projects/StormlightLabs/OpenSource/thndrs                                # [bg=#171928]=   [fg=#abb4da bg=#171928]=cwd: ~/Projects/StormlightLabs/OpenSource/thndrs [bg=#171928]=                             [bg=#171928]=  
│   ────────────────────────────────────────────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────────────────────────────────────────────── [bg=#171928]=  
│   [Runtime]                                                                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Runtime] [bg=#171928]=                                                                    [bg=#171928]=  
│     provider = "umans"                                                            # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=provider = "umans" [bg=#171928]=                                                         [bg=#171928]=  
│     model = "test-model"                                                          # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=model = "test-model" [bg=#171928]=                                                       [bg=#171928]=  
│     search = "native"                                                             # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=search = "native" [bg=#171928]=                                                          [bg=#171928]=  
│   [Context]                                                                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Context] [bg=#171928]=                                                                    [bg=#171928]=  
│     AGENTS.md                                                                     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=AGENTS.md [bg=#171928]=                                                                  [bg=#171928]=  
│   [Search]                                                                        # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Search] [bg=#171928]=                                                                     [bg=#171928]=  
│     native: Umans server-side search; DuckDuckGo HTML fallback via web_search     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=native: Umans server-side search; DuckDuckGo HTML fallback via web_search [bg=#171928]=  [bg=#171928]=  
│     tool; read_url fetches public HTTP(S) and extracts HTML with Lectito          # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=tool; read_url fetches public HTTP(S) and extracts HTML with Lectito [bg=#171928]=       [bg=#171928]=  
│   [Skills]                                                                        # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Skills] [bg=#171928]=                                                                     [bg=#171928]=  
│     (none)                                                                        # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=(none) [bg=#171928]=                                                                     [bg=#171928]=  
│   [Diagnostics]                                                                   # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=[Diagnostics] [bg=#171928]=                                                                [bg=#171928]=  
│     skill diagnostic /Users/test/.thndrs/skills/bad/SKILL.md: invalid YAML        # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=skill diagnostic /Users/test/.thndrs/skills/bad/SKILL.md: invalid YAML [bg=#171928]=     [bg=#171928]=  
│     frontmatter                                                                   # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=frontmatter [bg=#171928]=                                                                [bg=#171928]=  
│   ────────────────────────────────────────────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────────────────────────────────────────────── [bg=#171928]=  
│   ›  Ask for a change, run a command, or inspect this repo.                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=›   [fg=#abb4da bg=#171928]=Ask for a change, run a command, or inspect this repo. [bg=#171928]=                    [bg=#171928]=  
│   ?  help                                                                         # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=?   [fg=#abb4da bg=#171928]=help [bg=#171928]=                                                                      [bg=#171928]=  
│   /model switch models                                                            # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=/model  [fg=#abb4da bg=#171928]=switch models [bg=#171928]=                                                         [bg=#171928]=  
│                                                                                   # [bg=#171928]=
